# aliyun-log-py-bindings

./: .gitignore  Cargo.toml  aliyun_log_py_bindings.pyi  build.rs  build.sh  pyproject.toml
.github/workflows/: Build.yml  BuildWheel.yml  CI.yml  CheckUngil.yml  Release.yml
aliyun_log_py_bindings/: __init__.py
aliyun_log_py_bindings/json/: json.pyi
src/: lib.rs
test/: log_parser_benchmark_test.py  test.py  test.sh
