[package]
name = "aliyun-log-py-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aliyun_log_py_bindings"
crate-type = ["cdylib"]

[dependencies]
prost = "0.13.3"

[dependencies.pyo3]
version = "0.23.1"
features = ["abi3-py37"]


[build-dependencies]
prost-build = "0.13.3"


